// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseFile() Should parse basic table correctly 1`] = `
FileDeclarations {
  "declarations": Array [
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id",
            "type": "bigint",
          },
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
            },
            "name": "lineNumber",
            "type": "smallint",
          },
        ],
      },
      "header": TableHeader {
        "name": "Products",
      },
    },
  ],
}
`;

exports[`parseFile() Should parse file with two tables correctly 1`] = `
FileDeclarations {
  "declarations": Array [
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id",
            "type": "string",
          },
        ],
      },
      "header": TableHeader {
        "name": "TheFirst",
      },
    },
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id2",
            "type": "bigint",
          },
        ],
      },
      "header": TableHeader {
        "name": "theSecond",
      },
    },
  ],
}
`;
